⏸️ Disable auto-deployment - switching to manual deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
   deploy:
     needs: [test, security-scan]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: false   # Désactivé temporairement
     name: Deploy to Production
     
     steps:
